--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:fpm-bullseye
+FROM php:fpm
 
 RUN apt-get update && apt-get install -y \
     git \
@@ -6,5 +6,9 @@ RUN apt-get update && apt-get install -y \
     zip \
     vim \
     unzip
+
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+RUN docker-php-ext-install pdo pdo_mysql
 
 WORKDIR /var/www
