--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -15,5 +15,14 @@ server {
     location / {
         try_files $uri $uri/ /index.php?$query_string;
         gzip_static on;
+        if (!-f $request_filename){
+                set $rule_0 1$rule_0;
+        }
+        if (!-d $request_filename){
+                set $rule_0 2$rule_0;
+        }
+        if ($rule_0 = "21"){
+                rewrite ^/(.*)$ /index.php?$1 last;
+        }
     }
 }
